--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             </a>
             <div class="dropdown-menu dropdown-with-icons">
               <a href="./index.html" class="dropdown-item">
-                <i class="material-icons">layers</i> All Compo
+                <i class="material-icons">layers</i> Bedroom
               </a>
               <a href="https://demos.creative-tim.com/material-kit/docs/2.1/getting-started/introduction.html" class="dropdown-item">
-                <i class="material-icons">content_paste</i> Documentation
+                <i class="material-icons">layers</i> Living Room
               </a>
             </div>
           </li>
