--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- Material Kit CSS -->
   <link href="assets/css/material-kit.css?v=2.0.6" rel="stylesheet" />
+  <link rel="stylesheet" href="../EAudit_ELucifers/assets/css/main_style.css">
 </head>
 
 <body>
@@ -37,10 +38,10 @@
               <i class="material-icons">apps</i> Rooms
             </a>
             <div class="dropdown-menu dropdown-with-icons">
-              <a href="./index.html" class="dropdown-item">
+              <a href="./bedroom.html" class="dropdown-item">
                 <i class="material-icons">layers</i> Bedroom
               </a>
-              <a href="https://demos.creative-tim.com/material-kit/docs/2.1/getting-started/introduction.html" class="dropdown-item">
+              <a href="./living.html" class="dropdown-item">
                 <i class="material-icons">layers</i> Living Room
               </a>
             </div>
@@ -48,21 +49,6 @@
           <li class="nav-item">
             <a class="nav-link" href="link">
               <i class="material-icons">settings</i> Settings
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank" data-original-title="Follow us on Twitter">
-              <i class="fa fa-twitter"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank" data-original-title="Like us on Facebook">
-              <i class="fa fa-facebook-square"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank" data-original-title="Follow us on Instagram">
-              <i class="fa fa-instagram"></i>
             </a>
           </li>
         </ul>
@@ -79,7 +65,7 @@
         <div class="col-md-8 ml-auto mr-auto">
           <div class="brand text-center">
             <h1>Smart Eaudit</h1>
-            <h3 class="title text-center">Subtitle</h3>
+            <h3 class="title text-center">Changing the Way you think of Energy</h3>
           </div>
         </div>
       </div>
@@ -90,8 +76,9 @@
   <div class="main main-raised">
     <div class="container">
       <div class="section text-center">
-        <h2 class="title">Your main section here</h2>
-        <p></p>
+        <h2 class="title">Rooms : </h2>
+        <h3><a id="main_link" href="./bedroom.html">Bedroom</a></h3>
+        <h3><a id="main_link" href="./living.html">Living Room</a> </h3>
       </div>
     </div>
   </div>
