--- a/living.html
+++ b/living.html
@@ -44,6 +44,9 @@
               <a href="./living.html" class="dropdown-item">
                 <i class="material-icons">layers</i> Living Room
               </a>
+              <a href="./Bill_Page.html" class="dropdown-item">
+                <i class="material-icons">layers</i> Billing
+              </a>
             </div>
           </li>
           <li class="nav-item">
