Added Broken lins and Filxes

--- a/Bill_Page.html
+++ b/Bill_Page.html
@@ -70,8 +70,8 @@
       <div class="row">
         <div class="col-md-8 ml-auto mr-auto">
           <div class="brand text-center">
-            <h1>Smart Eaudit</h1>
-            <h3 class="title text-center">Changing the Way you think of Energy</h3>
+            <h1>Billing</h1>
+            <h3 class="title text-center">Manage and check your Bills from here</h3>
           </div>
         </div>
       </div>
