--- a/living.html
+++ b/living.html
@@ -67,8 +67,8 @@
       <div class="row">
         <div class="col-md-8 ml-auto mr-auto">
           <div class="brand text-center">
-            <h1>Smart Eaudit</h1>
-            <h3 class="title text-center">Changing the Way you think of Energy</h3>
+            <h1>Living Room</h1>
+            <h3 class="title text-center">See and Change state of All devices Avialable in Living Room</h3>
           </div>
         </div>
       </div>
