--- a/bedroom.html
+++ b/bedroom.html
@@ -50,7 +50,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="link">
+            <a class="nav-link" href="./settings.html">
               <i class="material-icons">settings</i> Settings
             </a>
           </li>
