--- a/bedroom.html
+++ b/bedroom.html
@@ -19,7 +19,7 @@
 
 
   <!-- Navigation Bar -->
-  <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
+  <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100">
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" href="../index.html">
@@ -44,7 +44,7 @@
               <a href="./living.html" class="dropdown-item">
                 <i class="material-icons">layers</i> Living Room
               </a>
-              <a href="./Bill_Page.html" class="dropdown-item">
+              <a href="./Bill_Page.php" class="dropdown-item">
                 <i class="material-icons">layers</i> Billing
               </a>
             </div>
@@ -62,7 +62,7 @@
 
 
 
-  <div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg3.jpg')" id="smalldivision">
+  <div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg3.jpg')" >
     <div class="container">
       <div class="row">
         <div class="col-md-8 ml-auto mr-auto">
