--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <nav class="float-left">
         <ul>
           <li>
-            <a href="https://www.link/">
+            <a href="../EAudit_ELucifers/index.html">
               Smart Eaudit
             </a>
           </li>
@@ -109,8 +109,8 @@
         &copy;
         <script>
           document.write(new Date().getFullYear())
-        </script>, made with <i class="material-icons">favorite</i> by
-        <a href="https://www.link/" target="blank">Smart Eaudit</a> for a better world.
+        </script>, Created at <a href="http://hacktiet.tech" target="blank">HackTiet</a> with<i class="material-icons">favorite</i> by
+        Team Elucifers. Thanks to our Sponsor Creative-Tim
       </div>
     </div>
   </footer>
