--- a/settings.html
+++ b/settings.html
@@ -95,25 +95,25 @@
 
 
   <footer class="footer footer-default">
-    <div class="container">
-      <nav class="float-left">
-        <ul>
-          <li>
-            <a href="https://www.link/">
-              Smart Eaudit
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <div class="copyright float-right">
-        &copy;
-        <script>
-          document.write(new Date().getFullYear())
-        </script>, made with <i class="material-icons">favorite</i> by
-        <a href="https://www.link/" target="blank">Smart Eaudit</a> for a better world.
+      <div class="container">
+        <nav class="float-left">
+          <ul>
+            <li>
+              <a href="../EAudit_ELucifers/index.html">
+                Smart Eaudit
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="copyright float-right">
+          &copy;
+          <script>
+            document.write(new Date().getFullYear())
+          </script>, Created at <a href="http://hacktiet.tech" target="blank">HackTiet</a> with<i class="material-icons">favorite</i> by
+          Team Elucifers. Thanks to our Sponsor Creative-Tim
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
 
   <!--   Core JS Files   -->
