FInal Settings Update

--- a/settings.html
+++ b/settings.html
@@ -79,13 +79,7 @@
   <div class="main main-raised">
     <div class="container">
       <div class="section text-center">
-        <h2 class="title">Rooms : </h2>
-        <h3><a id="main_link" href="./bedroom.html">Bedroom</a></h3>
-        <h3><a id="main_link" href="./living.html">Living Room</a> </h3>
-        <h3><a id="main_link" href="./Bill_Page.html">Billing</a> </h3>
-        <h2 class="title">Rooms : </h2>
-        <h3><a id="main_link" href="./settings.html">Settings</a> </h3>
-
+        <h2>More to come...</h2>
       </div>
     </div>
   </div>
